Bugzilla bug 142345: fixed mistakes in _MD_OpenSharedMemory and _MD_CloseSharedMemory.  Thanks to Vladimir Golitsin <vgolitsin@mindspring.com> for the bug report and bug fix.